--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "latex-editor",
   "version": "1.0.0",
   "description": "Super Simple Collaborative Latex Editor",
-  "bin": "latex-editor.js",
+  "bin": "./latex-editor.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node latex-editor.js",
-    "postinstall": "node node_modules/bower/bin/bower install"
+    "start": "node latex-editor.js"
   },
   "repository": {
     "type": "git",
