--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "latex-editor",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Super Simple Collaborative Latex Editor",
   "bin": "./latex-editor.js",
+  "files": ["bower_components", "latex-editor.js", "views"],
   "scripts": {
     "start": "node latex-editor.js"
   },
